# rscapt

./: Cargo.toml  LICENSE  README.md  add-ffmpeg-to-path.ps1  build.rs  rscapt.rc  windows-setup.txt
.github/workflows/: release.yml  rust.yml
app/: Cargo.toml  tauri.conf.json
app/icons/: icon.icns
app/src/: ipc.rs  lib.rs  main.rs
src/: clips.rs  config.rs  daemon.rs  installer.rs  ipc.rs  job.rs  logging.rs  main.rs  notify.rs  obs.rs  obs_profile.rs  processor.rs  queue.rs  setup.rs  share.rs  tray.rs  updater.rs  wizard.rs
src/tui/: app.rs  mod.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.css  App.tsx  index.css
ui/src/components/: ClipsPanel.css  ClipsPanel.tsx  JobsPanel.css  JobsPanel.tsx  StatusBar.css  StatusBar.tsx  TitleBar.css  TitleBar.tsx
