[package]
name = "rscapt-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "rscapt_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
dirs = "5"
